public/assets/stylesheets/embed.css
/*BEIGE: #fef1de*/
/*BLUE: #384f9e*/
/*LIGHTBLUE: #54c6c6*/
/*RED: #f82847*/
/*Yellow: #ffed00*/
/*Purple: #a339cd*/

@import url("https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.css");

@font-face {
    font-family: 'Eagle';
    src: url("../fonts/Eagle-Book.eot?-u70zge");
    src: url("../fonts/Eagle-Book.eot?#iefix-u70zge") format("embedded-opentype"), url("../fonts/Eagle-Book.ttf?-u70zge") format("truetype"), url("../fonts/Eagle-Book.woff?-u70zge") format("woff"), url("../fonts/Eagle-Book.svg?-u70zge#Eagle-Book") format("svg");
    font-weight: normal;
    font-style: normal;
}


.embed-player {
    background: #29292b;
    overflow: hidden;
    padding: 12px;
    box-sizing: border-box;
    position: relative;
    height: 124px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row nowrap;
    -ms-flex-flow: row nowrap;
    flex-flow: row nowrap;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
}

.image-box {
    position: relative;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -ms-flex-item-align: start;
    -webkit-align-self: flex-start;
            align-self: flex-start;
}

.xs .image-box, .xs .live-badge{
    height: 44px;
    width: 44px;
    max-height: 44px;
    max-width: 44px;
}

.xs .live-badge {
    top:0;
    left:0;
    right:0;
    bottom: 0;
    margin:0;
}

.xs .live-badge p.live {
    line-height: 44px;
}


.tiny .image-box, .token .image-box {
  display: none;
}

.content-box {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    /*border: 1px solid green;*/
    padding-left: 12px;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column nowrap;
    -ms-flex-flow: column nowrap;
    flex-flow: column nowrap;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
}

.xs .content-box, .tiny .content-box, .token .content-box {
    position: absolute;
    left: 0;
    right: 12px;
}

.xs .top-box {
    margin-left: 56px;
    height: 50px;
    max-height: 50px;
    margin-bottom: 6px;
}

.tiny .top-box {
  margin-left: 0;
}

.small .top-box, .medium .top-box, .large .top-box {
    height: 56px;
    max-height: 56px;
}

.xs .info-box, .tiny .info-box, .token .info-box {
    margin-right: 50px;
}

.tiny .info-box, .token .info-box {
  margin-bottom: 6px;
  height: 50px;
}

.tiny .action-panel {
  /*display: none;*/
}

h4.title {
    font-family: 'Eagle', sans-serif;
    color: #54c6c6;
    font-size: 21px;
    line-height: 24px;
    letter-spacing: 1px;
    margin: 0;
    max-height: 48px;
    line-limit: 2;
    /**/
    display: block;
    /* Fallback for non-webkit */
    display: -webkit-box;
    max-height: 48px;
    /* Fallback for non-webkit */
    margin: 0 auto;
    font-size: 21px;
    line-height: 24px;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-bottom: 0;
    margin-top: -3px;
}

h4.title .live {
    display: none;
}

.tiny h4.title .live {
    text-transform: uppercase;
    color:white;
    background: #f82847;
    padding: 2px;
    font-size: 12px;
    display: inline;
}

.xs h4.title, .tiny h4.title, .token h4.title {
    font-size: 16px;
    line-height: 16px;
}

.small h4.title {
    font-size: 18px;
    line-height: 18px;
    margin-top: 0;
}

h4.title:hover {
    text-decoration: underline;
}

.meta-info, .meta-info a {
    color: #384f9e;
}

.user, span.play-count, span.date {
    margin-bottom: 0;
    font-size: 14px;
    /*letter-spacing: 1px;*/
}

.xs .user, .tiny .user, .token .user {
    display: block;
    margin-top: -1px;
}

.small .user {
    display: inline-block;
    margin-top: -3px;
    font-size: 12px;
}

.user {
    font-weight: 700;
}

.user:hover {
    text-decoration: underline;
}

.xs span.user, .tiny span.user, .token span.user {
    font-size: 12px;
}

.small .meta-info {
    display: block;
    margin-top: -3px;
}

.live-badge {
    font-size: 12px;
    font-weight: 700;
    letter-spacing: 1px;
    color: white;
    text-transform: uppercase;
    background: #f82847;
    margin: 0;
    text-align: center;
    height: 36px;
    padding: 0;
    width: 60px;
    margin-left: 20px;
    position: absolute;
    top: 36px;
}

.live-badge p.live {
    font-family: 'Eagle',sans-serif;
    line-height: 36px;
}

.info-box {
    float: left;
    margin-right: 72px;
    line-height: 21px;
}

.small .info-box {
    height: 56px;
    max-height: 56px;
}

.branding-box {
    width: 60px;
    height: 60px;
    float: right;
    position: absolute;
    right: 12px;
    top: 4px;
}

.xs .branding-box, .tiny .branding-box , .token .branding-box {
    width: 36px;
    height: 36px;
    right: 0;
    top: -4px;
}

.brand-logo, .brand-words {
    position: absolute;
    width: inherit;
    height: inherit;
    color: #f82847;
    transition: opacity .5s ease;
}

.brand-logo svg, .brand-words svg {
    width: 60px;
    height: 60px;
    fill: currentColor;
}

.xs .brand-logo svg, .xs .brand-words svg, .tiny .brand-logo svg, .tiny .brand-words svg, .token .brand-logo svg, .token .brand-words svg {
    width: 36px;
    height: 36px;
}

.brand-logo {
    opacity: 1;
}

.brand-words {
    opacity: 0;
}

.branding-box:hover .brand-logo {
    opacity: 0;
}

.branding-box:hover .brand-words {
    opacity: 1;
}

/*JP*/
.player-box, .teaser-msg, .state-msg {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}
/* ... */

